added updated files including contact.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
             </div>
          
             <div id="linksp">
-            <a id="aboutp" href="#">About</a>
+            <a id="aboutp" href="index.html">About</a>
             <a id="portfoliop" href="#">Portfolio</a>
-            <a id="contactp" href="#">Contact</a>
+            <a id="contactp" href="contact.html">Contact</a>
                         
             </div>
         </div>
