--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
            <div id="links">
                 <a id="about" href="#">About</a>
-                <a id="portfolio" href="#">Portfolio</a>
-                <a id="contact" href="#">Contact</a>
+                <a id="portfolio" href="portfolio.html">Portfolio</a>
+                <a id="contact" href="contact.html">Contact</a>
                
            </div>
        </div>
